fixed ui layout issue based on new design

--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,10 @@ code {
   margin: 0.25em;
   width: 1.5em;
 }
-.reloadDouble:before, .reloadDouble:after {
+.reloadDouble:before,
+.reloadDouble:after {
   border-style: solid;
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 0;
@@ -42,8 +43,9 @@ code {
   padding: 0.25em;
   width: 2em;
 }
-.reloadSingle:before, .reloadSingle:after {
-  content: '';
+.reloadSingle:before,
+.reloadSingle:after {
+  content: "";
   display: block;
 }
 .reloadSingle:before {
@@ -66,13 +68,18 @@ code {
   left: 50%;
   width: 0;
 }
+
+th {
+  color: white !important;
+}
+
 @-webkit-keyframes rotate {
   100% {
     -webkit-transform: rotate(360deg);
- }
+  }
 }
 @keyframes rotate {
   100% {
     transform: rotate(360deg);
- }
+  }
 }
